--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
   font-weight: bold;
   color: #ffffff;
   text-shadow: 1px 1px 1px rgba(0,0,0,100), 1px 1px 1px rgba(0,0,0,100);
+  background-image: url('img.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
 }
 p {
   text-align: center;
