--- a/style.css
+++ b/style.css
@@ -18,7 +18,14 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.2);
+}
+.layer {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 p {
   text-align: center;
