--- a/style.css
+++ b/style.css
@@ -17,9 +17,17 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-.background{
-  background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.9)),
-    url('img.jpg');
+.background {
+  background:url('img.jpg');
+  position: relative;
+}
+.layer {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 p {
   text-align: center;
