--- a/style.css
+++ b/style.css
@@ -17,17 +17,9 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
-.background {
-  background:url('img.jpg');
-  position: relative;
-}
-.layer {
-  background-color: rgba(0, 0, 0, 0.9);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.background{
+  background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.9)),
+    url('img.jpg');
 }
 p {
   text-align: center;
