--- a/style.css
+++ b/style.css
@@ -14,12 +14,18 @@ body {
   font-weight: bold;
   color: #ffffff;
   text-shadow: 1px 1px 1px rgba(0,0,0,100), 1px 1px 1px rgba(0,0,0,100);
+  background-image: url('img.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
 }
-.background{
-  background: linear-gradient(rgba(0,0,0,.9), rgba(0,0,0,.9)),
-    url('img.jpg');
+.layer {
+  background-color: rgba(0, 0, 0, 0.9);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 p {
   text-align: center;
