--- a/style.css
+++ b/style.css
@@ -27,6 +27,17 @@ body {
   width: 100%;
   height: 100%;
 }
+.overlay{
+	position:absolute;
+	content:'';
+	width:100%;
+	height:100%;
+	top:0;
+	left:0;
+	min-height: 100%;
+	background:url('overlay.png');
+	background-repeat: repeat;
+}
 p {
   text-align: center;
   font-family: monospace;
